fixes, color contrast included

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -1,6 +1,7 @@
 header, footer {
     /* background-color: rgb(175, 9, 9); */
     background-color: rgb(196, 7, 7);
+    /* background-color: rgb(196, 7, 7); */
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -13,6 +14,21 @@ header, footer {
     margin: 0;
     /* margin: 1em; */
 }
+
+
+
+.wind p, h2 {
+    padding: 0;
+    padding-left: .5em;
+    margin: 0;
+    /* margin: 1em; */
+}
+
+/* .strong p, h2 {
+    padding: 0.5em;
+    margin: 0;
+
+} */
 
 .headerTop {
     display: flex;
@@ -36,7 +52,7 @@ header, footer {
   position: absolute;
   top: 1em;
   left: 1em;
-  color: #ffffff;
+  color: #7851a9;
 }
 
 .footer1Address {
@@ -78,7 +94,7 @@ main {
 
 .placeholderBoxesSpotlight {
     display: flex;
-    background-color: gray;
+    background-color: #faf2e7;
     /* width: 100%; */
     /* height: 22em; */
     /* justify-items: center; */
@@ -183,6 +199,7 @@ p {
 
 main {
     /* background-color: #a956fb; */
+    background-color:blanchedalmond;
 }
 
 .join {
@@ -205,13 +222,13 @@ button {
 }
 
 .temperatureDes p {
-    padding: .2em;
+    padding: .5em;
     font-style: bold;
 }
 
-.wind p {
+/* .wind p {
     padding: 0;
-}
+} */
 
 .wind {
     display: flex;
