--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -79,11 +79,17 @@
     .spotlightBox3 {
         display: block;
     }
-}
 
-.hero {
-    /* order: 1; */
-    grid-column: 2/4;
-    grid-row: 1/3;
-    height: fit-content;
+    .hero {
+        /* order: 1; */
+        grid-column: 2/4;
+        grid-row: 1/3;
+        height: fit-content;
+    }
+
+    .wind p, h2 {
+        padding: 0.5em;
+        margin: 0;
+        /* margin: 1em; */
+    }
 }
